<resources>
	<string name="app_name" translatable="false">Runner</string>
	<string name="url_forgot_password" translatable="false">https://www.usehover.com/u/password/new</string>
	<string name="api_url" translatable="false">https://www.usehover.com/api/</string>
	<string name="hsdk_base_url" translatable="false">https://www.usehover.com/sdk/</string>
	<string name="auth_endpoint" translatable="false">authenticate</string>
	<string name="token_endpoint" translatable="false">get_token</string>
	<string name="title_actions">Actions</string>
	<string name="title_transactions">Transactions</string>
	<string name="title_runs">Schedule</string>
	<string name="title_run_details">Run Details</string>
	<string name="title_settings">Settings</string>
	<string name="title_actions_in_filter">Choose actions</string>
	<string name="transaction_details">Transaction details</string>
	<string name="header_runs">Scheduled Runs</string>
	<string name="action_details">Action details</string>
	<string name="parser_details">Parser details</string>
	<string name="permissions_not_granted">You will need to grant permissions to have full functionality.</string>
	<string name="filter_text">Filter</string>
	<string name="filter_underlined"><u>Filter</u></string>
	<string name="test_all">Test all actions</string>
	<string name="test_some">Test %1$d actions</string>
	<string name="test_single">Test action</string>
	<string name="new_run_vars_title">New Test Run</string>
	<string name="new_run_vars_subtitle">%1$d/%2$d actions complete</string>
	<string name="run_group_description">Please fill out the remaining variables to create the test run.</string>
	<string name="above_skip_text">Don’t have the values for these variables right now?</string>
	<string name="label_skip">Skip</string>
	<string name="label_next">Next ></string>
	<string name="finish">Finish</string>
	<string name="summary_title">Create Test Run</string>
	<string name="new_run_single_subtitle">Testing %1$s</string>
	<string name="new_run_subtitle">Testing %1$d Actions</string>
	<string name="run_template">%1$s-actionsX%2$d</string>
	<string name="run_template_single">%1$s-action-%2$s</string>
	<string name="label_name">Test Run Name</string>
	<string name="label_frequency_input">How often?</string>
	<string-array name="frequency_array">
		<item>Once</item>
		<item>Hourly</item>
		<item>Daily</item>
		<item>Weekly</item>
	</string-array>
	<string name="label_when">Start</string>
	<string-array name="when_array">
		<item>Now</item>
		<item>Later</item>
	</string-array>
	<string name="label_start">Choose date and time</string>
	<string name="now">Now</string>
	<string name="label_run">Start Run</string>
	<string name="label_schedule">Schedule</string>
	<string name="notify_name_error">Please enter a name</string>
	<string name="notify_start_error">Please choose a start date and time</string>
	<string name="notify_past_error">Please choose a time in the future</string>
	<string name="notify_start_now">The chosen time is within 1 minutes, starting now</string>
	<string name="notify_starting">Starting test run…</string>
	<string name="notify_scheduled">Test run saved. It will run at the appropriate time.</string>
	<string name="notify_run_error">No run id, canceling.</string>
	<string name="in_progress_title">Tests running</string>
	<string name="in_progress_subtitle">%1$d of %2$d complete</string>
	<string name="all_complete">All tests complete</string>
	<string-array name="runs_filter_array">
		<item>Future</item>
		<item>Past</item>
		<item>All</item>
	</string-array>
	<string name="run_details_subtitle">Test Run</string>
	<string name="label_frequency">Frequency</string>
	<string name="label_next_start">Next run</string>
	<string name="label_last_start">Ran at</string>
	<string name="actions_to_run">Actions included</string>
	<string name="delete_text">Delete Run</string>
	<string name="delete_title">Delete this test run?</string>
	<string name="delete_message">This will cancel all future scheduled runs.</string>
	<string name="cancel">Cancel</string>
	<string name="delete">Delete</string>
	<string name="run_deleted">Test run deleted</string>
	<string name="sheduled_run_empty_label">No relevant scheduled run found. Try running an action(s) to schedule new runs </string>
	<string name="unfinished_run">Looks like this run did not complete successfully, it did not run every included action.</string>
	<string name="label_status">Status</string>
	<string name="label_action">Action</string>
	<string name="label_action_id">Action ID</string>
	<string name="label_time">Time</string>
	<string name="label_transaction_id">UUID</string>
	<string name="label_result">Result</string>
	<string name="label_category">Category</string>
	<string name="label_env">Environment</string>
	<string name="label_operator">Operator</string>
	<string name="normal_mode">Normal Mode</string>
	<string name="debug_mode">Debug Mode</string>
	<string name="test_mode">No SIM mode</string>
	<string name="title_filter_actions">Filter Actions</string>
	<string name="cta_filter_actions">Show %1$d Actions</string>
	<string name="title_filter_transactions">Filter Transactions</string>
	<string name="cta_filter_transactions">Show %1$d Transactions</string>
	<string name="reset"><u>Reset</u></string>
	<string name="label_search">Search</string>
	<string name="hint_search">Search for action ID or name</string>
	<string name="label_filter_tags">Tags</string>
	<string name="title_filter_tags">Choose Tags</string>
	<string name="hint_tags">Select tags</string>
	<string name="empty_tags">Only actions with no tags</string>
	<string name="hint_date_range"><![CDATA[From <account creation> to <today>]]></string>
	<string name="descrip_date_range">From %1$s to %2$s</string>
	<string name="label_filter_status">Status</string>
	<string name="success_label">Succeeded</string>
	<string name="pending_label">Pending</string>
	<string name="failed_label">Failed</string>
	<string name="not_yet_run_label">No transactions</string>
	<string name="succeeded_count_label">%1$d succeeded</string>
	<string name="pending_count_label">%1$d pending</string>
	<string name="failed_count_label">%1$d failed</string>
	<string name="count_label">%1$d total</string>
	<string name="search_hint_transaction">Search transaction id, or session text</string>
	<string name="date_range">Date range</string>
	<string name="countries">Countries</string>
	<string name="countries_hint">Select countries</string>
	<string name="network">Networks</string>
	<string name="network_hint">Select network operators</string>
	<string name="status">Status</string>
	<string name="no_transaction">No transaction</string>
	<string name="categories">Categories</string>
	<string name="categories_hint">Select categories</string>
	<string name="parsers_checkbox">Only show actions with parsers</string>
	<string name="sim_checkbox">Only show actions with SIM present</string>
	<string name="somethingWentWrong">Something went wrong, please try again</string>
	<string name="simon_content_desc">Hover_background</string>
	<string name="login_image_transition">image_transition</string>
	<string name="login_image_transition_2">image_transition2</string>
	<string name="action_trans_icon">action_trans_icon</string>
	<string name="custom_font_error">Cannot set custom font</string>
	<string name="custom_font_err_msg">At least one default font must be set</string>
	<string name="email_string">Email</string>
	<string name="email_hint">e.g. email@ilovehover.com</string>
	<string name="package_hint">e.g. com.hover.internal</string>
	<string name="api_key_hint">e.g. 1234567890ABCDEFGHIJKLMNOPQSTUVXYZ</string>
	<string name="password">Password</string>
	<string name="password_hint">Enter your password</string>
	<string name="signIn">Sign in</string>
	<string name="forgot_password">Forgot password</string>
	<string name="loadingText">Loading…</string>
	<string name="loggin_in_text">Logging in, please wait…</string>
	<string name="package_name_err">Unable to get package name, please check app settings.</string>
	<string name="sign_in_err">Unable to sign in, please check your email and password.</string>
	<string name="sign_in_success">Signed in successfully</string>
	<string name="one_or_more_empty_variable">This action has one or more empty variables. Please check.</string>
	<string name="testing_mode">Testing mode</string>
	<string name="normal">Normal</string>
	<string name="normal_toolTip">USSD sessions run in the background</string>
	<string name="Debug">Debug</string>
	<string name="debug_toolTip">Watch USSD sessions as they happen</string>
	<string name="no_sim">No SIM</string>
	<string name="delay_hint">Seconds delay between sessions</string>
	<string name="no_sim_toolTip">When you do not have the correct SIM for the service you want to test</string>
	<string name="sim_cards">SIM cards</string>
	<string name="action_icon_status_description">Status indicator</string>
	<string name="sim_tooltip">Don’t see the correct SIM? Try removing it and re-inserting it. If that doesn\’t work, contact support.</string>
	<string name="contact_support">Contact support</string>
	<string name="refresh">Refresh</string>
	<string name="profile">Profile</string>
	<string name="signout">Sign out</string>
	<string name="sim1">SIM 1</string>
	<string name="sim2">SIM 2</string>
	<string name="refresh_app_data">Refresh app data</string>
	<string name="no_sim_found">No sim detected</string>
	<string name="app_data_refreshed">App would be refreshed in background</string>
	<string name="pendingStatus_title">This action has a pending transaction.</string>
	<string name="pendingStatus_desc">This transaction has no parsers or has failed to match an existing parser.</string>
	<string name="pendingStatus_linkText"><u>Learn more about pending transactions</u></string>
	<string name="pendingStatus_url">https://docs.usehover.com/parsing</string>
	<string name="pending_transaction">Pending Transaction</string>
	<string name="failed_transaction">Failed Transaction</string>
	<string name="failedStatus_title">This action has a failed transaction.</string>
	<string name="failedStatus_desc">This action has matched a parser with a failed transaction status.</string>
	<string name="failedStatus_linkText"><u>Learn more about failed transactions</u></string>
	<string name="failedStatus_url">https://docs.usehover.com/parsing</string>
	<string name="successStatus_title">This action works.</string>
	<string name="unrunStatus_title">This action has not yet been run on this device.</string>
	<string name="emptyString"> </string>
	<string name="transaction_det_failed">This transaction failed</string>
	<string name="transaction_det_pending">This transaction is pending</string>
	<string name="transaction_det_success">This transaction worked</string>
	<string name="sim_filter">SIM</string>
	<string name="operators">Operators</string>
	<string name="longcode">Longcode</string>
	<string name="parsers">Parsers</string>
	<string name="testing_variables">Testing variables</string>
	<string name="testing_variables_desc">We submit these values whenever you test this action.</string>
	<string name="device">Device</string>
	<string name="debug_info">Debug info</string>
	<string name="messages">Messages</string>
	<string name="recent_transactions">Recent transactions</string>
	<string name="view_all">View all</string>
	<string name="zero_transactions">No transactions yet</string>
	<string name="parser_type">Type</string>
	<string name="parser_action">Action</string>
	<string name="parser_actionID">ActionID</string>
	<string name="parser_category">Category</string>
	<string name="parser_status">Status</string>
	<string name="parser_created">Created</string>
	<string name="parser_sender">Sender</string>
	<string name="parser_regex">Regex</string>
	<string name="transac_details_status">Status</string>
	<string name="transac_details_action">Action</string>
	<string name="transac_details_actionId">ActionID</string>
</resources>