<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<org.eazegraph.lib.charts.PieChart
		android:id="@+id/pie"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:padding="@dimen/margin8"
		app:egInnerPaddingColor="@color/runnerDark"
		app:egInnerValueColor="@color/runnerWhite"
		app:egInnerValueSize="@dimen/text_15"
		app:egUseInnerValue="true"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_toEndOf="@id/pie"
		android:layout_alignTop="@id/pie"
		android:layout_alignBottom="@id/pie"
		android:layout_alignParentEnd="true"
		android:padding="@dimen/margin16"
		android:orientation="vertical">

		<TextView android:id="@+id/pending_total"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:gravity="center_vertical"
			android:textColor="@color/runnerWhite"
			android:text="@string/pending_label"
			app:drawableStartCompat="@drawable/swatch_pending"
			android:drawablePadding="@dimen/margin8" />

		<TextView android:id="@+id/succeeded_total"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:gravity="center_vertical"
			android:textColor="@color/runnerWhite"
			app:drawableStartCompat="@drawable/swatch_succeeded"
			android:drawablePadding="@dimen/margin8"
			android:text="@string/success_label"/>

		<TextView android:id="@+id/failed_total"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:gravity="center_vertical"
			android:textColor="@color/runnerWhite"
			app:drawableStartCompat="@drawable/swatch_failed"
			android:drawablePadding="@dimen/margin8"
			android:text="@string/failed_label"/>

	</LinearLayout>
</RelativeLayout>