<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginBottom="@dimen/margin52"
	android:background="?attr/colorSurface">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="@dimen/margin85"
		android:layout_marginBottom="@dimen/margin16"
		app:elevation="@dimen/elevation_up"
		android:background="?attr/colorPrimary"
		android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
		app:titleTextAppearance="@style/TitleText"
		app:subtitleTextAppearance="@style/SubtitleText"
		app:title="@string/summary_title"
		app:subtitle="@string/new_run_subtitle" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/runName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/toolbar"
		style="@style/LabeledInput"
		android:hint="@string/label_name">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/nameInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/runnerWhite"
			android:textSize="@dimen/text_17"
			android:textColorHint="@color/runnerWhite"
			android:layout_marginVertical="@dimen/margin8"
			android:maxLines="1" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/scheduleDropdown"
		android:labelFor="@id/scheduleAutocomplete"
		style="@style/LabeledDropdown"
		android:hint="@string/label_frequency"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/runName">

		<AutoCompleteTextView
			android:id="@+id/scheduleAutocomplete"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="none"
			android:completionThreshold="0"
			android:drawablePadding="@dimen/margin13"
			android:dropDownWidth="wrap_content"
			android:textColor="@color/runnerWhite"
			android:textCursorDrawable="@null"
			app:endIconMode="dropdown_menu"
			app:errorTextColor="@color/runnerRed" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
		android:id="@+id/fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentBottom="true"
		android:layout_marginEnd="@dimen/margin16"
		android:layout_marginBottom="@dimen/margin21"
		android:text="@string/start_label"
		android:textAlignment="center"
		android:textStyle="bold"
		app:shapeAppearanceOverlay="@style/ExtendedFab" />

</RelativeLayout>