<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="@dimen/margin16"
        android:paddingVertical="@dimen/margin13">

        <TextView android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/icon"
            android:textSize="@dimen/text_17"
            android:transitionName="li_title"
            android:textColor="@color/runnerWhite"
            android:textStyle="bold"
            android:text="@string/title_actions"/>

        <TextView android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/icon"
            android:textSize="@dimen/text_17"
            android:textColor="@color/runnerWhite"
            android:textStyle="bold"
            android:text="@string/in_progress_subtitle"/>

        <ImageView android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_warning_black_24dp"
            android:contentDescription="@string/action_icon_status_description"
            android:visibility="invisible"/>
    </RelativeLayout>

    <View android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lineColor"/>
</LinearLayout>