<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".transactionDetails.TransactionDetailsFragment"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="32dp"
            android:orientation="vertical">

        <com.hover.runner.main.DetailsHeaderView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/transactionDetailsTopLayoutId"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin33"
            android:layout_marginHorizontal="@dimen/margin16">

            <TableRow android:layout_marginBottom="@dimen/margin16">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin21"
                    android:textColor="@color/runnerPrimary"
                    android:textSize="@dimen/text_15"
                    android:text="@string/label_status"/>

                <TextView android:id="@+id/value_status"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryGrey"
                    android:textSize="@dimen/text_15" />
            </TableRow>

            <TableRow android:layout_marginBottom="@dimen/margin16">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin21"
                    android:textColor="@color/runnerPrimary"
                    android:textSize="@dimen/text_15"
                    android:text="@string/label_category"/>

                <TextView android:id="@+id/value_category"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryGrey"
                    android:textSize="@dimen/text_15" />
            </TableRow>

            <TableRow android:layout_marginBottom="@dimen/margin16">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin21"
                    android:textColor="@color/runnerPrimary"
                    android:textSize="@dimen/text_15"
                    android:text="@string/label_action"/>

                <TextView android:id="@+id/value_action"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryGrey"
                    android:textSize="@dimen/text_15" />
            </TableRow>

            <TableRow android:layout_marginBottom="@dimen/margin16">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin21"
                    android:textColor="@color/runnerPrimary"
                    android:textSize="@dimen/text_15"
                    android:text="@string/label_action_id"/>

                <TextView android:id="@+id/value_action_id"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryGrey"
                    android:textSize="@dimen/text_15" />
            </TableRow>

            <TableRow android:layout_marginBottom="@dimen/margin16">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin21"
                    android:textColor="@color/runnerPrimary"
                    android:textSize="@dimen/text_15"
                    android:text="@string/label_time"/>

                <TextView android:id="@+id/value_time"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryGrey"
                    android:textSize="@dimen/text_15" />
            </TableRow>

            <TableRow android:layout_marginBottom="@dimen/margin16">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin21"
                    android:textColor="@color/runnerPrimary"
                    android:textSize="@dimen/text_15"
                    android:text="@string/label_transaction_id"/>

                <TextView android:id="@+id/value_transaction_id"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryGrey"
                    android:textSize="@dimen/text_15" />
            </TableRow>

            <TableRow android:layout_marginBottom="@dimen/margin16">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin21"
                    android:textColor="@color/runnerPrimary"
                    android:textSize="@dimen/text_15"
                    android:text="@string/label_result"/>

                <TextView android:id="@+id/value_result"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryGrey"
                    android:textSize="@dimen/text_15" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin21"
                    android:textColor="@color/runnerPrimary"
                    android:textSize="@dimen/text_15"
                    android:text="@string/label_operator"/>

                <TextView android:id="@+id/value_operator"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryGrey"
                    android:textSize="@dimen/text_15" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/messages"
            android:textColor="@color/runnerWhite"
            android:textSize="@dimen/text_17"
            android:textStyle="bold"
            android:layout_marginTop="48dp"
            android:layout_marginHorizontal="@dimen/margin16"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/runnerPrimary"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="@dimen/margin16" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="@dimen/margin16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:id="@+id/transac_messages_recyclerView"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>