<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="@dimen/margin85"
		android:background="?attr/colorPrimary"
		android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
		app:elevation="@dimen/elevation_up"
		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
		app:subtitle="@string/run_details_subtitle"
		app:subtitleTextAppearance="@style/SubtitleText"
		app:titleTextAppearance="@style/TitleText" />

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/toolbar"
		android:layout_marginHorizontal="@dimen/margin16">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TableLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginVertical="@dimen/margin33">

				<TableRow android:layout_marginBottom="@dimen/margin16">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginEnd="@dimen/margin21"
						android:textColor="@color/runnerPrimary"
						android:textSize="@dimen/text_15"
						android:text="@string/label_frequency"/>

					<TextView android:id="@+id/frequency_value"
						android:layout_width="0dp"
						android:layout_weight="1"
						android:layout_height="wrap_content"
						android:textColor="@color/secondaryGrey"
						android:textSize="@dimen/text_15" />
				</TableRow>

				<TableRow>
					<TextView android:id="@+id/start_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginEnd="@dimen/margin21"
						android:textColor="@color/runnerPrimary"
						android:textSize="@dimen/text_15"
						android:text="@string/label_next_start"/>

					<TextView android:id="@+id/start_value"
						android:layout_width="0dp"
						android:layout_weight="1"
						android:layout_height="wrap_content"
						android:textColor="@color/secondaryGrey"
						android:textSize="@dimen/text_15" />
				</TableRow>
			</TableLayout>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/runnerWhite"
				android:textStyle="bold"
				android:textSize="@dimen/text_17"
				android:text="@string/actions_to_run"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/runnerPrimary"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="@dimen/margin16"/>

			<androidx.recyclerview.widget.RecyclerView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_behavior="@string/appbar_scrolling_view_behavior"
				android:id="@+id/recyclerView"/>

		</LinearLayout>
	</androidx.core.widget.NestedScrollView>
</RelativeLayout>