<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/secondaryGrey"
	android:paddingVertical="16dp"
	android:id="@+id/detail_header_root"
	android:paddingHorizontal="@dimen/margin16"
	android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textStyle="bold"
		android:drawablePadding="@dimen/margin16"
		android:textColor="@color/runnerDark"
		android:textSize="@dimen/text_22"
		android:background="?selectableItemBackground"
		android:transitionName="action_title"
		android:id="@+id/header_title"
		app:drawableStartCompat="@drawable/ic_arrow_back_black_24dp" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="42dp"
		android:textSize="@dimen/text_14"
		android:id="@+id/header_subtitle"
		android:textColor="@color/runnerDark"
		android:layout_marginBottom="@dimen/margin16" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/unrunStatus_title"
		android:textStyle="bold"
		android:textColor="@color/runnerDark"
		android:textSize="@dimen/text_14"
		android:id="@+id/header_status"
		android:layout_marginStart="42dp"
		android:layout_marginBottom="@dimen/margin16" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/header_description"
		android:drawablePadding="@dimen/margin16"
		android:text="@string/pendingStatus_desc"
		android:textColor="@color/runnerDark"
		android:textSize="@dimen/text_14"
		android:visibility="gone"
		android:layout_marginStart="42dp"
		android:layout_marginBottom="@dimen/margin16" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/header_learn"
		android:text="@string/pendingStatus_linkText"
		android:textStyle="bold"
		android:textSize="@dimen/text_14"
		android:textColor="@color/runnerDark"
		android:drawablePadding="4dp"
		android:visibility="gone"
		android:layout_marginStart="42dp"
		android:layout_marginBottom="8dp"
		app:drawableEndCompat="@drawable/ic_open_in_new_black_15dp" />
</LinearLayout>